--- a/greenfox/my-first-web-application-001/index.html
+++ b/greenfox/my-first-web-application-001/index.html
@@ -11,26 +11,33 @@
 </head>
 
 <body>
-    <div id="container">container
-        <div id="main">main
+    <div id="container">
+        <div id="main">
             <div id="left" class="button">
                 <img src="http://stayathome-syllabus.greenfox.academy/week03/assets/arrow.svg" alt="left">
             </div>
-            <div id="imageContainer">imagecontainer
-                <div id="image">
-                    <img src="./images/caterpillar-5113614_1920.jpg" alt="caterpillar">
+            <img id="photo">
+            <!-- <div id="image"> -->
+            <!-- <img src="./images/caterpillar-5113614_1920.jpg" alt="caterpillar"> -->
+            <!-- <div class="gray-container">
+                    <h1 id="photo-title"></h1>
+                    <p id="photo-description"></p>
+                </div> -->
+            <!-- </div> -->
+
+            <!-- <div id="imageContainer">
+                
+                <div id="subtitle">
+                    <div id="title"></div>
+                    <div id="text"></div>
                 </div>
-                <div id="subtitle">subtitle
-                    <div id="title">title</div>
-                    <div id="text">text</div>
-                </div>
-            </div>
+            </div> -->
             <div id="right" class="button">
                 <img src="http://stayathome-syllabus.greenfox.academy/week03/assets/arrow.svg" alt="left">
 
             </div>
         </div>
-        <div id="thumbnails">thumbnails</div>
+        <div id="thumbnails"></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="script.js"></script>
