--- a/greenfox/my-first-web-application-001/index.html
+++ b/greenfox/my-first-web-application-001/index.html
@@ -17,6 +17,10 @@
                 <img src="http://stayathome-syllabus.greenfox.academy/week03/assets/arrow.svg" alt="left">
             </div>
             <img id="photo">
+            <div id="subtitle">
+                <div id="title">kjhkjhg</div>
+                <div id="description">kjhgkjhgkjhg</div>
+            </div>
             <!-- <div id="image"> -->
             <!-- <img src="./images/caterpillar-5113614_1920.jpg" alt="caterpillar"> -->
             <!-- <div class="gray-container">
@@ -39,6 +43,8 @@
         </div>
         <div id="thumbnails"></div>
     </div>
+    <img class="hidden photos-1"></img>
+    <img class="hidden photos-2"></img>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="script.js"></script>
 </body>
